--- a/prjPOOAdrianoPasquale/src/fatec/poo/view/GuiHotel.form
+++ b/prjPOOAdrianoPasquale/src/fatec/poo/view/GuiHotel.form
@@ -21,16 +21,25 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Recepcionista"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemRecepcionistaActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemHospede">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Hospede"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemHospedeActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemServQuarto">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Servi&#xe7;o de Quarto"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemServQuartoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
