--- a/prjPOOAdrianoPasquale/src/fatec/poo/view/GuiQuarto.form
+++ b/prjPOOAdrianoPasquale/src/fatec/poo/view/GuiQuarto.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
-    <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
+    <Component class="javax.swing.ButtonGroup" name="grpTipoQuarto">
     </Component>
   </NonVisualComponents>
   <Properties>
@@ -147,7 +147,7 @@
         <Component class="javax.swing.JRadioButton" name="rdbSolteiro">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="buttonGroup1"/>
+              <ComponentRef name="grpTipoQuarto"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Solteiro"/>
           </Properties>
@@ -155,7 +155,7 @@
         <Component class="javax.swing.JRadioButton" name="rdbCasal">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="buttonGroup1"/>
+              <ComponentRef name="grpTipoQuarto"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Casal"/>
           </Properties>
