--- a/prjPOOAdrianoPasquale/src/fatec/poo/view/GuiRecepcionista.form
+++ b/prjPOOAdrianoPasquale/src/fatec/poo/view/GuiRecepcionista.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
-    <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
+    <Component class="javax.swing.ButtonGroup" name="grpTurno">
     </Component>
   </NonVisualComponents>
   <Properties>
@@ -150,7 +150,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="rdbTarde" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="rdbTarde1" min="-2" max="-2" attributes="0"/>
+                  <Component id="rdbNoite" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -162,7 +162,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="rdbManha" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="rdbTarde" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="rdbTarde1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="rdbNoite" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -173,7 +173,7 @@
         <Component class="javax.swing.JRadioButton" name="rdbManha">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="buttonGroup1"/>
+              <ComponentRef name="grpTurno"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Manh&#xe3;"/>
           </Properties>
@@ -181,15 +181,15 @@
         <Component class="javax.swing.JRadioButton" name="rdbTarde">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="buttonGroup1"/>
+              <ComponentRef name="grpTurno"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Tarde"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JRadioButton" name="rdbTarde1">
+        <Component class="javax.swing.JRadioButton" name="rdbNoite">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="buttonGroup1"/>
+              <ComponentRef name="grpTurno"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Noite"/>
           </Properties>
